--- a/package.json
+++ b/package.json
@@ -15,8 +15,20 @@
   "devDependencies": {
     "@types/node": "^17.0.8",
     "@types/react": "^17.0.38",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
     "eslint": "8.7.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-next": "12.0.8",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-import-helpers": "^1.2.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.28.0",
+    "prettier": "^2.5.1",
+    "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.4"
   }
 }
