--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@chakra-ui/react": "^1.7.4",
     "@emotion/react": "11",
     "@emotion/styled": "11",
+    "@prisma/client": "^3.9.1",
     "framer-motion": "5",
     "next": "^12.0.9",
     "react": "17.0.2",
@@ -40,6 +41,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "prettier": "^2.5.1",
+    "prisma": "^3.9.1",
     "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.4"
   }
